# NORTHTONE_COMMANDER

./: .gitignore  HISTORY.md  LICENSE  NorthTone Commander.command  README.md  SESSION_HISTORY.md  pyproject.toml  run.sh  tech_spec_northtone_commander_en.md
northtone/: __init__.py  app.py  styles.tcss
northtone/core/: __init__.py  config.py  filesystem.py
northtone/utils/: __init__.py  formatter.py  keymap.py
northtone/widgets/: __init__.py  file_list.py  file_panel.py  footer.py
scripts/: build_dmg_macos.sh  build_standalone_macos.sh  install_macos.sh  package_release_macos.sh
tests/: test_app.py  test_config.py  test_filesystem.py  test_formatter.py
